refactor: move request/response structs to function scope
Since they are only used inside their respective API functions, it is
better to declare them as function-scoped structs.
