# docs/swagger.json
@@ -24,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.createDocumentRequest"
+                            "$ref": "#/definitions/controllers.CreateDocument.requestBody"
                         }
                     }
                 ],
@@ -32,19 +32,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controllers.createDocumentSuccessResponse"
+                            "$ref": "#/definitions/controllers.CreateDocument.successResponseBody"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/controllers.createDocumentInvalidResponse"
+                            "$ref": "#/definitions/controllers.CreateDocument.invalidResponseBody"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/controllers.createDocumentFailedResponse"
+                            "$ref": "#/definitions/controllers.CreateDocument.failedResponseBody"
                         }
                     }
                 }
@@ -66,7 +66,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/router.healthResponse"
+                            "$ref": "#/definitions/router.CheckHealth.responseBody"
                         }
                     }
                 }
@@ -92,7 +92,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.userCreateRequest"
+                            "$ref": "#/definitions/controllers.UserCreate.requestBody"
                         }
                     }
                 ],
@@ -100,13 +100,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controllers.userCreateSuccessResponse"
+                            "$ref": "#/definitions/controllers.UserCreate.successResponseBody"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/controllers.userCreateExistedResponse"
+                            "$ref": "#/definitions/controllers.UserCreate.existedResponseBody"
                         }
                     }
                 }
@@ -114,28 +114,7 @@
         }
     },
     "definitions": {
-        "controllers.UserDto": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string",
-                    "example": "email@mail.com"
-                },
-                "id": {
-                    "type": "integer",
-                    "example": 1
-                },
-                "identity": {
-                    "type": "string",
-                    "example": "user"
-                },
-                "username": {
-                    "type": "string",
-                    "example": "username"
-                }
-            }
-        },
-        "controllers.createDocumentFailedResponse": {
+        "controllers.CreateDocument.failedResponseBody": {
             "type": "object",
             "properties": {
                 "error": {
@@ -144,7 +123,7 @@
                 }
             }
         },
-        "controllers.createDocumentInvalidResponse": {
+        "controllers.CreateDocument.invalidResponseBody": {
             "type": "object",
             "properties": {
                 "error": {
@@ -153,7 +132,7 @@
                 }
             }
         },
-        "controllers.createDocumentRequest": {
+        "controllers.CreateDocument.requestBody": {
             "type": "object",
             "required": [
                 "author_id"
@@ -165,7 +144,7 @@
                 }
             }
         },
-        "controllers.createDocumentSuccessResponse": {
+        "controllers.CreateDocument.successResponseBody": {
             "type": "object",
             "properties": {
                 "document_id": {
@@ -174,7 +153,7 @@
                 }
             }
         },
-        "controllers.userCreateExistedResponse": {
+        "controllers.UserCreate.existedResponseBody": {
             "type": "object",
             "properties": {
                 "msg": {
@@ -183,7 +162,7 @@
                 }
             }
         },
-        "controllers.userCreateRequest": {
+        "controllers.UserCreate.requestBody": {
             "type": "object",
             "required": [
                 "email",
@@ -205,7 +184,7 @@
                 }
             }
         },
-        "controllers.userCreateSuccessResponse": {
+        "controllers.UserCreate.successResponseBody": {
             "type": "object",
             "properties": {
                 "user": {
@@ -213,7 +192,28 @@
                 }
             }
         },
-        "router.healthResponse": {
+        "controllers.UserDto": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "email@mail.com"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "identity": {
+                    "type": "string",
+                    "example": "user"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "username"
+                }
+            }
+        },
+        "router.CheckHealth.responseBody": {
             "type": "object",
             "properties": {
                 "message": {
